base/back-sb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back
  namespace: bank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back
  template:
    metadata:
      labels:
        app: back
    spec:
      containers:
      - name: back
        image: readytodev/5team-back:2.0 
        ports:
        - containerPort: 8080
