base/front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  namespace: bank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: front
        image: readytodev/bank-front:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 80
