base/back-service.yaml
# my-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bank-back
  namespace: bank
spec:
  selector:
    app: back
  ports:
    - protocol: TCP
      port: 8080       # 외부에서 접근할 포트
      targetPort: 8080 # 컨테이너 내부의 포트
  type: NodePort
