base/front-service.yaml
# my-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bank-front
  namespace: bank
spec:
  selector:
    app: front
  ports:
    - protocol: TCP
      port: 3000        # 외부에서 접근할 포트
      targetPort: 80    # 컨테이너 내부의 포트
  type: NodePort
